--- a/book.html
+++ b/book.html
@@ -100,8 +100,10 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-							<p>Please Come Back Later</p>
-							<h2>Under Construction</h2>
+							<header class="align-center">
+								<p>Please Come Back Later</p>
+								<h2>Under Construction</h2>
+							</header>
 						</div>
 					</div>
 				</div>
