--- a/contact.html
+++ b/contact.html
@@ -99,10 +99,27 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-							<header class="align-center">
-								<p>Please Come Back Later</p>
-								<h2>Under Construction</h2>
-							</header>
+
+							<div class="row 200%">
+								<div class="6u 12u$(medium)">
+									<h3>Email:</h3>
+									<p>info@yafacharity.org.uk</p>
+									<h3>Message Us:</h3>
+									<p>Facebook Messenger</p>
+									<h3>Find Us:</h3>
+									<p>The YAFA Charity Organisation</p>
+									<p>58 Fawcett Street</p>
+									<p>Sheffield</p>
+									<p>S3 7PN</p>
+								</div>
+									
+								<div class="6u 12u$(medium)">
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11318.853757188097!2d-1.4905571817218841!3d53.388068780251494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4879788392be5833%3A0x652d8fd81c9547cc!2sThe%20Yafa%20Charity%20Organisation!5e0!3m2!1sen!2suk!4v1619286382129!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+								</div>
+							</div>
+
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfknHSVgouguXPXDE2VzpLdotZ8lh1MEatckHSUwDQZXyOTrw/viewform?embedded=true" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
 						</div>
 					</div>
 				</div>
