--- a/contact.html
+++ b/contact.html
@@ -103,9 +103,9 @@
 							<div class="row 200%">
 								<div class="6u 12u$(medium)">
 									<h3>Email:</h3>
-									<p>info@yafacharity.org.uk</p>
+									<p><a href="mailto:info@yafacharity.org.uk">info@yafacharity.org.uk</a></p>
 									<h3>Message Us:</h3>
-									<p>Facebook Messenger</p>
+									<p><a href="https://facebook.com/YAFAcharityOrg">Facebook Messenger</a></p>
 									<h3>Find Us:</h3>
 									<p>The YAFA Charity Organisation</p>
 									<p>58 Fawcett Street</p>
