--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p>Get In Touch</p>
-						<h2>Contact</h2>
+						<h2>Contact Us</h2>
 					</header>
 				</div>
 			</section>
