--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
 									<p><a href="https://facebook.com/YAFAcharityOrg">Facebook Messenger</a></p>
 									<h3>Find Us:</h3>
 									<p>The YAFA Charity Organisation
-									<br>58 Fawcett Street
+									<br>58 – 64 Fawcett Street
 									<br>Sheffield
 									<br>S3 7PN</p>
 								</div>
