--- a/donate.html
+++ b/donate.html
@@ -103,6 +103,11 @@
 								<p>Please Come Back Later</p>
 								<h2>Under Construction</h2>
 							</header>
+							<!--
+							<i class="icon fa-paypal"></i><br>
+							<i class="icon fa-apple"></i><br>
+							<i class="icon fa-google"></i>
+							-->
 						</div>
 					</div>
 				</div>
