more mobile friendly
still needing fixing the donate button but will get done for the next push if you can find it

--- a/donate.html
+++ b/donate.html
@@ -115,7 +115,7 @@
 											<div class="form-item form-item-choice-field form-item-select">
 												<label for="id_currency-switcher" class="form-item_label required"></label>
 												<div class="form-item-wrapper">
-													<select id="d_currency-switcher" name="currency-switcher">
+													<select id="id_currency-switcher" class="id-currency-switcher" name="currency-switcher">
 														<option value="usd" selected>USD   $</option>
 														<option value="gbp">GBP   £</option>
 													</select>
@@ -162,7 +162,7 @@
                             		£40
                         			</label>
 														</div>
-														
+
 														<div class="donation-amount--col">
 															<div class="donation-amount donation-amount-other">
 																<input type="radio" name="amount" value="12333.00" class="donation-amount__radio one-time-donation-amount-radio" autocomplete="off" data-other-amount-radio="">
