Revert "more changes made to make it more mobile friendly"
This reverts commit 6cb8fc9894ae59549c3fbc4b70300497b464cb32.

--- a/donate.html
+++ b/donate.html
@@ -103,7 +103,7 @@
 								<div class="image-feature">
 										<img src="images/charityexample.jpg" class="image-feature-image">
 								</div>
-								<div class="intro">
+								<div class="intro align-center">
 									<p> YAFA is a charity ...</p>
 								</div>
 							</div>
@@ -115,7 +115,7 @@
 											<div class="form-item form-item-choice-field form-item-select">
 												<label for="id_currency-switcher" class="form-item_label required"></label>
 												<div class="form-item-wrapper">
-													<select id="id_currency-switcher" class="currency-switcher" name="currency-switcher">
+													<select id="d_currency-switcher" name="currency-switcher">
 														<option value="usd" selected>USD   $</option>
 														<option value="gbp">GBP   £</option>
 													</select>
@@ -127,7 +127,7 @@
 										<div class="donate-form-tabs tabs js-tabs">
 											<form class="donate-form-tabs-options" action="index.html" method="post">
 												<div class="tabs-options inline-block-child" role="presentation">
-													<label for="one-time" class="tabs-label tabs__item--selected js-tab-item" aria-controls="tab-panel-1" id="tab-1" aria-selected="true" data-label="Single"> <input type="radio" class="tabs-radio-option" name="donation_frequency" value="one-time" autocomplete="off" checked=""> <span class="tabs__label-text">One time</span> </label>
+													<label for="one-time" class="tabs-label tabs__item--selected js-tab-item" aria-controls="tab-panel-1" id="tab-1" aria-selected="true" data-label="Single"> <input type="radio" class="tabs-radio-option" name="donation_frequency" value="one-time" autocomplete="off" checked=""> <span class="tabs__label-text">ONE TIME</span> </label>
 												</div>
 												<div class="tabs-options inline-block-child" role="presentation">
 													<label for="monthly" class="tabs-label js-tab-item " aria-controls="tab-panel-2" id="tab-2" data-label="Monthly" aria-selected="false"> <input type="radio" class="tabs-radio-option" name="donation_frequency" id="monthly" value="monthly" autocomplete="off" > <span class="tabs__label-text">Monthly</span> </label>
@@ -162,7 +162,7 @@
                             		£40
                         			</label>
 														</div>
-
+														
 														<div class="donation-amount--col">
 															<div class="donation-amount donation-amount-other">
 																<input type="radio" name="amount" value="12333.00" class="donation-amount__radio one-time-donation-amount-radio" autocomplete="off" data-other-amount-radio="">
