mobile friendly partners
just needs resizing

--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 					</div>
 					<div class="secondary-partners">
 						<div class="image-feature_about strive-2-help inline-block-child">
-							<img src="images/Strive2help_logo.png" cla2ss="image-feature-image_about-S2H image-feature-image_about inline-block-child">
+							<img src="images/Strive2help_logo.png" class="image-feature-image_about-S2H image-feature-image_about inline-block-child">
 						</div>
 					</div>
 				</div>
