--- a/donate.html
+++ b/donate.html
@@ -168,7 +168,7 @@
 									<label><input type="radio" name="donation_amount" value="20"><span>£20</span></label>
 									<label><input type="radio" name="donation_amount" value="30"><span>£30</span></label>
 									<label><input type="radio" name="donation_amount" value="60"><span>£60</span></label>
-									<label><input type="radio" name="donation_amount" id="other_amount" value=""><span>£<input type="number" onclick="otherAmount()" name="donation_amount" value="" placeholder="OTHER AMOUNT"></span></label>
+									<label><input type="radio" name="donation_amount" id="other_amount" value=""><span>£<input type="number" onclick="otherAmount()" id="input_once" value="" placeholder="OTHER AMOUNT"></span></label>
 								</p>
 							</div>
 
@@ -180,7 +180,7 @@
 									<label><input type="radio" name="donation_amount" value="10"><span>£10 per month</span></label>
 									<label><input type="radio" name="donation_amount" value="15"><span>£15 per month</span></label>
 									<label><input type="radio" name="donation_amount" value="20"><span>£20 per month</span></label>
-									<label><input type="radio" name="donation_amount" id="other_amount_monthly" value=""><span>£<input type="number" onclick="otherAmountMonthly()" name="donation_amount" value="" placeholder="OTHER AMOUNT"></span></label>
+									<label><input type="radio" name="donation_amount" id="other_amount_monthly" value=""><span>£<input type="number" onclick="otherAmountMonthly()" id="input_monthly" value="" placeholder="OTHER AMOUNT"></span></label>
 								</p>
 							</div>
 
