--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 			  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
-					<b><a href="/">HOME</a>
+					<a href="/">HOME</a>
 					</li>
 					<li>
 					<a href="#!">ABOUT</a>
@@ -70,14 +70,11 @@
 					</ul>
 					</li>
 					<li>
-					<a href="news">NEWS</a>
-					</li>
-					<li>
 					<a href="contact">CONTACT</a>
 					</li>
 					<li>
 					  <a href="donate" class="button special">DONATE</a>
-					</li></b>
+					</li>
 				  </ul>
 		  
 					  
