--- a/about.html
+++ b/about.html
@@ -181,6 +181,8 @@
 								<li><a href="https://www.tnlcommunityfund.org.uk/" title="">The National Lottery Community Fund</a></li>
 								<li><a href="https://www.assistsheffield.org.uk/about-us" title="">ASSIST Sheffield</a></li>								
 								<li><a href="https://www.learnsheffield.co.uk/" title="">Learn Sheffield</a></li>
+								<li><a href="https://discoverystem.org.uk/about/" title="">Discovery STEM</a></li>
+								<li><a href="https://www.childrensuniversity.co.uk/get-involved/learning-providers/" title="">Children's University</a></li>
 								<li><a href="https://www.sheffcol.ac.uk/school-engagement" title="">The Sheffield College</a></li>
 								<li><a href="https://www.shu.ac.uk/schools-and-community-outreach" title="">Schools and community outreach | Sheffield Hallam University</a></li>
 								<li><a href="https://www.sheffield.ac.uk/schools/contact" title="">Check for community outreach programmes | University of Sheffield</a></li>
