--- a/forms/registration.html
+++ b/forms/registration.html
@@ -70,9 +70,6 @@
 				</ul>
 				</li>
 				<li>
-				<a href="../donate">NEWS</a>
-				</li>
-				<li>
 				<a href="../contact">CONTACT</a>
 				</li>
 				<li>
@@ -95,15 +92,14 @@
 				</div>
 			</section>
 
+			
+
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-							<header class="align-center">
-								<p>Please Come Back Later</p>
-								<h2>Under Construction</h2>
-							</header>
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd178MeWjMHxzvfQxvj-NdL8-E_ZQHbnK9i8j4zJHB4kkpVjQ/viewform?embedded=true" width="100%" height="1080" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 						</div>
 					</div>
 				</div>
