--- a/book.html
+++ b/book.html
@@ -104,12 +104,12 @@
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>maecenas sapien feugiat ex purus</p>
+										<p>Sheffield Arabic Complementary School</p>
 										<h2>The Future School</h2>
 									</header>
-									<p> Tincidunt id aliquet risus feugiat in. Pellentesque dignissim enim sit amet venenatis urna cursus eget nunc. Sed cras ornare arcu dui vivamus arcu felis bibendum ut.</p>
+									<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
 									<footer class="align-center">
-										<a href="forms/registration.html" class="button alt">Learn more</a>
+										<a href="forms/registration.html" class="button alt">Register</a>
 									</footer>
 								</div>
 							</div>
@@ -122,34 +122,17 @@
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>mattis elementum sapien pretium tellus</p>
-										<h2>Dolor Morbi</h2>
+										<p>Hire Our Building</p>
+										<h2>Venue Hire</h2>
 									</header>
-									<p> Porta lorem mollis aliquam ut porttitor leo a diam. Suspendisse sed nisi lacus sed viverra.</p>
+									<p> We have an open plan space with a capacity for 50 people, classrooms with internet connection, a kitchen, disabled access including toilets, a big green space in the front and a car park at the rear. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
 									<footer class="align-center">
-										<a href="forms/covid-form.html" class="button alt">Learn more</a>
+										<a href="forms/venue-hire.html" class="button alt">Book</a>
 									</footer>
 								</div>
 							</div>
 						</div>
 
-						<div>
-							<div class="box">
-								<div class="image fit">
-									<img src="images/pic01.jpg" alt="" />
-								</div>
-								<div class="content">
-									<header class="align-center">
-										<p>mattis elementum sapien pretium tellus</p>
-										<h2>Neque Vitae</h2>
-									</header>
-									<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Elit at imperdiet dui accumsan sit amet nulla.</p>
-									<footer class="align-center">
-										<a href="forms/venue-hire.html" class="button alt">Learn more</a>
-									</footer>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</section>
@@ -160,8 +143,8 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/YAFAcharityOrg" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://facebook.com/YAFAcharityOrg" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://instagram.com/YAFAcharityOrg" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="mailto: info@yafacharity.org.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
