--- a/forms/venue-hire.html
+++ b/forms/venue-hire.html
@@ -70,9 +70,6 @@
 				</ul>
 				</li>
 				<li>
-				<a href="../donate">NEWS</a>
-				</li>
-				<li>
 				<a href="../contact">CONTACT</a>
 				</li>
 				<li>
@@ -100,10 +97,7 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-							<header class="align-center">
-								<p>Please Come Back Later</p>
-								<h2>Under Construction</h2>
-							</header>
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe7UhKUAjqWMPp4FF4pWYOt4TJpqwbaQE3oFd-8Ar4ohkef2w/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 						</div>
 					</div>
 				</div>
