--- a/donate.html
+++ b/donate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">	
 	<head>
 		<title>Donate - YAFA</title>
 		<meta charset="utf-8" />
@@ -47,7 +47,7 @@
 				  <a href="what-we-do">SPORTS</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">FACILITIES AND SERVICES</a>
+				  <a href="what-we-do">FACILITIES AND THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
@@ -61,10 +61,7 @@
 				  <a href="book">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a href="book">SERVICES</a>
-				  </li>
-				  <li>
-				  <a href="book">DAYS OUT</a>
+				  <a href="book">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
