--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="en">	
 	<head>
 		<title>YAFA - Youth And Family Alliance</title>
 		<meta charset="utf-8" />
@@ -50,7 +50,7 @@
 					<a href="what-we-do">SPORTS</a>
 					</li>
 					<li>
-					<a href="what-we-do">FACILITIES AND SERVICES</a>
+					<a href="what-we-do">FACILITIES AND THE FUTURE SCHOOL</a>
 					</li>
 				</ul>
 				</li>
@@ -64,10 +64,7 @@
 				  <a href="book">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a href="book">SERVICES</a>
-				  </li>
-				  <li>
-				  <a href="book">DAYS OUT</a>
+				  <a href="book">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
@@ -112,16 +109,16 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/pic03.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>maecenas sapien feugiat ex purus</p>
-										<h2>The Future School</h2>
+										<p>Hire Our Building</p>
+										<h2>Venue Hire</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p> We have an open plan space with a capacity for 50 people, classrooms with internet connection, a kitchen, disabled access including toilets, a big green space in the front and a car park at the rear. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="forms/venue-hire.html" class="button alt">Book</a>
 									</footer>
 								</div>
 							</div>
@@ -130,16 +127,16 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/pic02.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>mattis elementum sapien pretium tellus</p>
-										<h2>Vestibulum sit amet</h2>
+										<p>Sheffield Arabic Complementary School</p>
+										<h2>The Future School</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="forms/registration.html" class="button alt">Register</a>
 									</footer>
 								</div>
 							</div>
