--- a/timetable.html
+++ b/timetable.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="en">	
 	<head>
 		<title>Whats On - YAFA</title>
 		<meta charset="utf-8" />
@@ -48,7 +48,7 @@
 				  <a href="what-we-do">SPORTS</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">FACILITIES AND SERVICES</a>
+				  <a href="what-we-do">FACILITIES AND THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
@@ -62,10 +62,7 @@
 				  <a href="book">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a href="book">SERVICES</a>
-				  </li>
-				  <li>
-				  <a href="book">DAYS OUT</a>
+				  <a href="book">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
