--- a/contact.html
+++ b/contact.html
@@ -32,22 +32,22 @@
 				<a href="#!">WHAT WE DO</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a href="what-we-do">COMMUNITY DEVELOPMENT</a>
+				  <a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">EDUCATION AND TRAINING</a>
+				  <a href="what-we-do#education">EDUCATION AND TRAINING</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">YOUTH ACTIVITIES</a>
+				  <a href="what-we-do#youth">YOUTH ACTIVITIES</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">ARTS, CULTURE AND HERITAGE</a>
+				  <a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">SPORTS</a>
+				  <a href="what-we-do#sports">SPORTS</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">FACILITIES AND THE FUTURE SCHOOL</a>
+				  <a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
