--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
 				<a href="#!">WHAT WE DO</a>
 				<ul class="nav-dropdown">
 					<li>
-					<a href="what-we-do">COMMUNITY DEVELOPMENT</a>
+					<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
 					</li>
 					<li>
-					<a href="what-we-do">EDUCATION AND TRAINING</a>
+					<a href="what-we-do#education">EDUCATION AND TRAINING</a>
 					</li>
 					<li>
-					<a href="what-we-do">YOUTH ACTIVITIES</a>
+					<a href="what-we-do#youth">YOUTH ACTIVITIES</a>
 					</li>
 					<li>
-					<a href="what-we-do">ARTS, CULTURE AND HERITAGE</a>
+					<a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
 					</li>
 					<li>
-					<a href="what-we-do">SPORTS</a>
+					<a href="what-we-do#sports">SPORTS</a>
 					</li>
 					<li>
-					<a href="what-we-do">FACILITIES AND THE FUTURE SCHOOL</a>
+					<a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
 					</li>
 				</ul>
 				</li>
@@ -61,10 +61,10 @@
 				<a href="#!">BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a href="book">VENUE HIRE</a>
+				  <a href="book.html#venue-hire">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a href="book">THE FUTURE SCHOOL</a>
+				  <a href="book.html#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
@@ -116,7 +116,7 @@
 										<p>Hire Our Building</p>
 										<h2>Venue Hire</h2>
 									</header>
-									<p> We have an open plan space with a capacity for 50 people, classrooms with internet connection, a kitchen, disabled access including toilets, a big green space in the front and a car park at the rear. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
+									<p> We have an air conditioned open plan space with a capacity for upto 80 people with internet connection, a sound system, a kitchen, disabled access and toilets, front and rear car parking. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
 									<footer class="align-center">
 										<a href="forms/venue-hire.html" class="button alt">Book</a>
 									</footer>
@@ -150,8 +150,10 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p></p>
+						&nbsp;
+						<h2></h2>
+						&nbsp;
 					</header>
 				</div>
 			</section>
@@ -159,10 +161,6 @@
 		<!-- Three -->
 			<section id="three" class="wrapper style2">
 				<div class="inner">
-					<header class="align-center">
-						<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
-					</header>
 					<div class="gallery">
 						<div>
 							<div class="image fit">
