--- a/what-we-do.html
+++ b/what-we-do.html
@@ -33,22 +33,22 @@
 					<a href="#!">WHAT WE DO</a>
 					<ul class="nav-dropdown">
 						<li>
-						<a href="#!">COMMUNITY DEVELOPMENT</a>
+						<a href="#!#community-development">COMMUNITY DEVELOPMENT</a>
 						</li>
 						<li>
-						<a href="#!">EDUCATION AND TRAINING</a>
+						<a href="#!#education">EDUCATION AND TRAINING</a>
 						</li>
 						<li>
-						<a href="#!">YOUTH ACTIVITIES</a>
+						<a href="#!#youth">YOUTH ACTIVITIES</a>
 						</li>
 						<li>
-						<a href="#!">ARTS, CULTURE AND HERITAGE</a>
+						<a href="#!#arts">ARTS, CULTURE AND HERITAGE</a>
 						</li>
 						<li>
-						<a href="#!">SPORTS</a>
+						<a href="#!#sports">SPORTS</a>
 						</li>
 						<li>
-						<a href="#!">FACILITIES AND THE FUTURE SCHOOL</a>
+						<a href="#!#other">FACILITIES AND THE FUTURE SCHOOL</a>
 						</li>
 					</ul>
 					</li>
@@ -94,19 +94,20 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-                            <h3>COMMUNITY DEVELOPMENT</h3>
+                            <h3 id="community-development">COMMUNITY DEVELOPMENT</h3>
 							<p>Group support, we at YAFA fully support members of the community to form social groups/clubs and have allowed these groups to use the nu base booking to establish these gatherings. For example, we currently have a women's club that meets every Saturday evening, a men's mental health group that meets every Thursday evening, a girls club and a youth club, a number of breakfast groups, we support a very successful basic english classes for BAME women and we also established GCSE Support for young people. We' re always happy to support community initiatives as this is one of our core reasons for setting up the charity. So if you have an idea and need advice and guidance and a facility to deliver the project, please get in contact.</p>
-                            <h3>EDUCATION AND TRAINING</h3>
+                            <h3 id="education">EDUCATION AND TRAINING</h3>
 							<p>English classes for women is one of our most successful projects. We have one qualified English teacher, teaching two classes a week, one beginner/basic level and the other intermediate level; however, class sizes are limited to approximately 14 students. All the women are from the BAME community of Netherthorpe and Upperthorpe.</p>
-                            <p>GCSE support was set up to help meet that objective. The sessions take place two days a week, Tuesday and Thursday evening and deliver maths and science GCSE support. Staff are all volunteers and are all qualified and experienced teachers.</p>
-                            <h3>YOUTH ACTIVITIES</h3>
+                            <p>The B.O.A.T offers short course English classes for all individuals’. Courses are designed for all ages and abilities. We offer alternative ways of learning. For more information click <a href="files/BOAT FLYER JUNE 2021.pdf" target="_blank">HERE.</a></p>
+							<p>GCSE support was set up to help meet that objective. The sessions take place two days a week, Tuesday and Thursday evening and deliver maths and science GCSE support. Staff are all volunteers and are all qualified and experienced teachers.</p>
+                            <h3 id="youth">YOUTH ACTIVITIES</h3>
 							<p>The youth club is held every Sunday. Currently, we have 25 attendees between the ages of 11-17.</p>
                             <p>Girls club held every Monday has over 20 attendees. All run by volunteers. It's members fully support the club. However, the club has no funding at this current time. Seeking funds for this project will be one of our main priorities over the coming months.</p>
-                            <h3>ARTS, CULTURE AND HERITAGE</h3>
-                            <p>The local community requested we set up an Arabic school. It's our second year, and we now have six teachers and 70 students. The school opens Friday evening between 5 PM - 8 PM and Saturday between 11 AM - 2 PM. If you wish your child to attend please go click <a href="#!">HERE</a></p>
-                            <h3>SPORTS</h3>
+                            <h3 id="arts">ARTS, CULTURE AND HERITAGE</h3>
+                            <p>The local community requested we set up an Arabic school. It's our second year, and we now have six teachers and 70 students. The school opens Friday evening between 5 PM - 8 PM and Saturday between 11 AM - 2 PM. If you wish your child to attend please click <a href="#!">HERE</a></p>
+                            <h3 id="sports">SPORTS</h3>
                             <p>Swimming every Saturday morning at Hillsborough Leisure Centre. Please contact us for details.</p>
-                            <p>Football every Saturday at Goodwin Sports Centre. Please contact us for details.</p>
+                            <p id="other">Football every Saturday at Goodwin Sports Centre. Please contact us for details.</p>
                         </div>
 					</div>
 				</div>
