--- a/book.html
+++ b/book.html
@@ -33,22 +33,22 @@
 				<a href="#!">WHAT WE DO</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a href="what-we-do">COMMUNITY DEVELOPMENT</a>
+				  <a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">EDUCATION AND TRAINING</a>
+				  <a href="what-we-do#education">EDUCATION AND TRAINING</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">YOUTH ACTIVITIES</a>
+				  <a href="what-we-do#youth">YOUTH ACTIVITIES</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">ARTS, CULTURE AND HERITAGE</a>
+				  <a href="what-we-do#arts">ARTS, CULTURE AND HERITAGE</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">SPORTS</a>
+				  <a href="what-we-do#sports">SPORTS</a>
 				  </li>
 				  <li>
-				  <a href="what-we-do">FACILITIES AND THE FUTURE SCHOOL</a>
+				  <a href="what-we-do#other">FACILITIES AND THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
@@ -95,7 +95,7 @@
 					<div class="grid-style">
 
 						<div>
-							<div class="box">
+							<div class="box" id="arabic-school">
 								<div class="image fit">
 									<img src="images/pic02.jpg" alt="" />
 								</div>
@@ -113,7 +113,7 @@
 						</div>
 
 						<div>
-							<div class="box">
+							<div class="box" id="venue-hire">
 								<div class="image fit">
 									<img src="images/pic03.jpg" alt="" />
 								</div>
