--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 			  </div>
 		  
 			  <nav>
-			  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+			  <div class="nav-mobile"><a id="nav-toggle"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
 				<a href="/">HOME</a>
@@ -29,7 +29,7 @@
 				<a href="about">ABOUT</a>
 				</li>
 				<li>
-				<a href="#!">WHAT WE DO</a>
+				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
@@ -55,7 +55,7 @@
 				<a href="timetable">TIMETABLE</a>
 				</li>
 				<li>
-				<a href="#!">BOOK</a>
+				<a>BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a href="book">VENUE HIRE</a>
@@ -69,7 +69,7 @@
 				<a href="news">NEWS</a>
 				</li>
 				<li>
-				<a href="#!">CONTACT</a>
+				<a>CONTACT</a>
 				</li>
 				<li>
 				  <a href="donate" class="button special">DONATE</a>
