--- a/forms/registration.html
+++ b/forms/registration.html
@@ -21,7 +21,7 @@
 			  </div>
 		  
 			  <nav>
-			  <div class="nav-mobile"><a id="nav-toggle" href="../#!"><span></span></a></div>
+			  <div class="nav-mobile"><a id="nav-toggle" href="../"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
 				<a href="/">HOME</a>
@@ -30,7 +30,7 @@
 				<a href="../about">ABOUT</a>
 				</li>
 				<li>
-				<a href="#!">WHAT WE DO</a>
+				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a href="../what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
@@ -56,13 +56,13 @@
 				<a href="../timetable">TIMETABLE</a>
 				</li>
 				<li>
-				<a href="#!">BOOK</a>
+				<a>BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a href="#!">VENUE HIRE</a>
+				  <a>VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a href="#!">THE FUTURE SCHOOL</a>
+				  <a>THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
