--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 		<section class="navigation">
 			<div class="nav-container">
 			  <div class="brand">
-				<a href="#!">
+				<a>
 				  <img alt="YAFA Logo" src="images/favicon.png">
 				</a>
 			  </div>
 		  
 			  <nav>
-			  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+			  <div class="nav-mobile"><a id="nav-toggle"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
-				<a href="#!">HOME</a>
+				<a>HOME</a>
 				</li>
 				<li>
 				<a href="about">ABOUT</a>
 				</li>
 				<li>
-				<a href="#!">WHAT WE DO</a>
+				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
 					<li>
 					<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
@@ -58,7 +58,7 @@
 				<a href="timetable">TIMETABLE</a>
 				</li>
 				<li>
-				<a href="#!">BOOK</a>
+				<a>BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a href="book.html#venue-hire">VENUE HIRE</a>
@@ -109,7 +109,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/pic05.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
