--- a/timetable.html
+++ b/timetable.html
@@ -21,7 +21,7 @@
 			  </div>
 		  
 			  <nav>
-			  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+			  <div class="nav-mobile"><a id="nav-toggle"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
 				<a href="/">HOME</a>
@@ -30,7 +30,7 @@
 				<a href="about">ABOUT</a>
 				</li>
 				<li>
-				<a href="#!">WHAT WE DO</a>
+				<a>WHAT WE DO</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
@@ -53,10 +53,10 @@
 				</ul>
 				</li>
 				<li>
-				<a href="#!">TIMETABLE</a>
+				<a>TIMETABLE</a>
 				</li>
 				<li>
-				<a href="#!">BOOK</a>
+				<a>BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a href="book">VENUE HIRE</a>
