--- a/about.html
+++ b/about.html
@@ -21,16 +21,16 @@
 			  </div>
 		  
 			  <nav>
-			  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+			  <div class="nav-mobile"><a id="nav-toggle"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
 					<a href="/">HOME</a>
 					</li>
 					<li>
-					<a href="#!">ABOUT</a>
+					<a>ABOUT</a>
 					</li>
 					<li>
-					<a href="#!">WHAT WE DO</a>
+					<a>WHAT WE DO</a>
 					<ul class="nav-dropdown">
 						<li>
 						<a href="what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
@@ -56,7 +56,7 @@
 					<a href="timetable">TIMETABLE</a>
 					</li>
 					<li>
-					<a href="#!">BOOK</a>
+					<a>BOOK</a>
 					<ul class="nav-dropdown">
 					  <li>
 					  <a href="book">VENUE HIRE</a>
@@ -131,7 +131,7 @@
 
 								<div class="Secondary">
 						
-									<a href="" title="" target="_blank">
+									<a href="#" title="" target="_blank">
 									<img src="images/aden-steelers-crest-logo.png" alt=""></a>
 
 								</div>
