--- a/what-we-do.html
+++ b/what-we-do.html
@@ -21,7 +21,7 @@
 			  </div>
 		  
 			  <nav>
-			  <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+			  <div class="nav-mobile"><a id="nav-toggle"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
 					<a href="/">HOME</a>
@@ -30,25 +30,25 @@
 					<a href="about">ABOUT</a>
 					</li>
 					<li>
-					<a href="#!">WHAT WE DO</a>
+					<a>WHAT WE DO</a>
 					<ul class="nav-dropdown">
 						<li>
-						<a href="#!#community-development">COMMUNITY DEVELOPMENT</a>
+						<a href="#community-development">COMMUNITY DEVELOPMENT</a>
 						</li>
 						<li>
-						<a href="#!#education">EDUCATION AND TRAINING</a>
+						<a href="#education">EDUCATION AND TRAINING</a>
 						</li>
 						<li>
-						<a href="#!#youth">YOUTH ACTIVITIES</a>
+						<a href="#youth">YOUTH ACTIVITIES</a>
 						</li>
 						<li>
-						<a href="#!#arts">ARTS, CULTURE AND HERITAGE</a>
+						<a href="#arts">ARTS, CULTURE AND HERITAGE</a>
 						</li>
 						<li>
-						<a href="#!#sports">SPORTS</a>
+						<a href="#sports">SPORTS</a>
 						</li>
 						<li>
-						<a href="#!#other">FACILITIES AND THE FUTURE SCHOOL</a>
+						<a href="#other">FACILITIES AND THE FUTURE SCHOOL</a>
 						</li>
 					</ul>
 					</li>
@@ -56,7 +56,7 @@
 					<a href="timetable">TIMETABLE</a>
 					</li>
 					<li>
-					<a href="#!">BOOK</a>
+					<a>BOOK</a>
 					<ul class="nav-dropdown">
 					  <li>
 					  <a href="book">VENUE HIRE</a>
@@ -104,7 +104,7 @@
 							<p>The youth club is held every Sunday. Currently, we have 25 attendees between the ages of 11-17.</p>
                             <p>Girls club held every Monday has over 20 attendees. All run by volunteers. It's members fully support the club. However, the club has no funding at this current time. Seeking funds for this project will be one of our main priorities over the coming months.</p>
                             <h3 id="arts">ARTS, CULTURE AND HERITAGE</h3>
-                            <p>The local community requested we set up an Arabic school. It's our second year, and we now have six teachers and 70 students. The school opens Friday evening between 5 PM - 8 PM and Saturday between 11 AM - 2 PM. If you wish your child to attend please click <a href="#!">HERE</a></p>
+                            <p>The local community requested we set up an Arabic school. It's our second year, and we now have six teachers and 70 students. The school opens Friday evening between 5 PM - 8 PM and Saturday between 11 AM - 2 PM. If you wish your child to attend please click <a>HERE</a></p>
                             <h3 id="sports">SPORTS</h3>
                             <p>Swimming every Saturday morning at Hillsborough Leisure Centre. Please contact us for details.</p>
                             <p id="other">Football every Saturday at Goodwin Sports Centre. Please contact us for details.</p>
