--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 		<!-- Header	-->
 		<section class="navigation">
 			<div class="nav-container">
-			  <div class="brand">
+			  <div class="logo">
 				<a href="/">
 				  <img alt="YAFA Logo" src="images/favicon.png">
 				</a>
@@ -58,10 +58,10 @@
 				<a>BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a href="book">VENUE HIRE</a>
+				  <a href="book#venue-hire">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a href="book">THE FUTURE SCHOOL</a>
+				  <a href="book#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
