--- a/forms/registration.html
+++ b/forms/registration.html
@@ -14,7 +14,7 @@
 		<!-- Header	-->
 		<section class="navigation">
 			<div class="nav-container">
-			  <div class="brand">
+			  <div class="logo">
 				<a href="/">
 				  <img alt="YAFA Logo" src="../images/favicon.png">
 				</a>
