--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header	-->
 		<section class="navigation">
 			<div class="nav-container">
-			  <div class="brand">
+			  <div class="logo">
 				<a>
 				  <img alt="YAFA Logo" src="images/favicon.png">
 				</a>
@@ -61,10 +61,10 @@
 				<a>BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a href="book.html#venue-hire">VENUE HIRE</a>
+				  <a href="book#venue-hire">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a href="book.html#arabic-school">THE FUTURE SCHOOL</a>
+				  <a href="book#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
