--- a/book.html
+++ b/book.html
@@ -14,7 +14,7 @@
 		<!-- Header	-->
 		<section class="navigation">
 			<div class="nav-container">
-			  <div class="brand">
+			  <div class="logo">
 				<a href="/">
 				  <img alt="YAFA Logo" src="images/favicon.png">
 				</a>
@@ -106,7 +106,7 @@
 									</header>
 									<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
 									<footer class="align-center">
-										<a href="forms/registration.html" class="button alt">Register</a>
+										<a href="forms/registration" class="button alt">Register</a>
 									</footer>
 								</div>
 							</div>
@@ -124,7 +124,7 @@
 									</header>
 									<p> We have an open plan space with a capacity for 50 people, classrooms with internet connection, a kitchen, disabled access including toilets, a big green space in the front and a car park at the rear. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
 									<footer class="align-center">
-										<a href="forms/venue-hire.html" class="button alt">Book</a>
+										<a href="forms/venue-hire" class="button alt">Book</a>
 									</footer>
 								</div>
 							</div>
