--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:site_name" content="YAFA - Youth And Family Alliance">
 		<meta property="og:title" content="YAFA - Youth And Family Alliance" />
 		<meta property="og:description" content="The YAFA Charity Organisation is a British registered charitable organization committed to supporting individuals and families residing in Upperthorpe and Netherthorpe and surrounding areas. To endeavour to improve the lives of people within these communities, through providing support and access to adequate facilities for educational training, youth mentoring/activities and social cohesion projects through engaging and working closely with the local authority and other charities." />
-		<meta property="og:image:secure_url" itemprop="image" content="https://www.yafacharity.org.uk/images/pic05.jpg">
+		<meta property="og:image:secure_url" itemprop="image" content="https://www.yafacharity.org.uk/images/favicon.png">
 		<meta property="og:type" content="website" />		
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
