--- a/404.html
+++ b/404.html
@@ -81,13 +81,26 @@
 
 		<!-- One -->
 			<section id="One" class="wrapper style3">
+				&nbsp;
+				&nbsp;
 				<div class="inner">
 					<header class="align-center">
 						<p>File not found</p>
+						&nbsp;
 						<h2>404</h2>
+						&nbsp;
 					</header>
 				</div>
+				&nbsp;
+				&nbsp;
 			</section>
+
+		<!-- Two -->
+		<section id="two" class="wrapper style2">
+			<div class="inner" style="height: 30vh;">
+			</div>
+		</section>
+
 
 		<!-- Footer -->
 			<footer id="footer">
