--- a/book.html
+++ b/book.html
@@ -122,7 +122,7 @@
 										<p>Hire Our Building</p>
 										<h2>Venue Hire</h2>
 									</header>
-									<p> We have an open plan space with a capacity for 50 people, classrooms with internet connection, a kitchen, disabled access including toilets, a big green space in the front and a car park at the rear. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
+									<p> We have an air conditioned open plan space with a capacity for upto 80 people with internet connection, a sound system, a kitchen, disabled access and toilets, front and rear car parking. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
 									<footer class="align-center">
 										<a href="forms/venue-hire" class="button alt">Book</a>
 									</footer>
