--- a/forms/registration.html
+++ b/forms/registration.html
@@ -59,10 +59,10 @@
 				<a>BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a>VENUE HIRE</a>
+				  <a href="../forms#venue-hire">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a>THE FUTURE SCHOOL</a>
+				  <a href="../forms#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
