--- a/timetable.html
+++ b/timetable.html
@@ -56,14 +56,14 @@
 				<a>TIMETABLE</a>
 				</li>
 				<li>
-				<a>BOOK</a>
+				<a>FORMS</a>
 				<ul class="nav-dropdown">
-				  <li>
-				  <a href="book#venue-hire">VENUE HIRE</a>
-				  </li>
-				  <li>
-				  <a href="book#arabic-school">THE FUTURE SCHOOL</a>
-				  </li>
+					<li>
+					<a href="forms#venue-hire">VENUE HIRE</a>
+					</li>
+					<li>
+					<a href="forms#arabic-school">THE FUTURE SCHOOL</a>
+					</li>
 				</ul>
 				</li>
 				<li>
