--- a/what-we-do.html
+++ b/what-we-do.html
@@ -56,13 +56,13 @@
 					<a href="timetable">TIMETABLE</a>
 					</li>
 					<li>
-					<a>BOOK</a>
+					<a>FORMS</a>
 					<ul class="nav-dropdown">
 					  <li>
-					  <a href="book#venue-hire">VENUE HIRE</a>
+					  <a href="forms#venue-hire">VENUE HIRE</a>
 					  </li>
 					  <li>
-					  <a href="book#arabic-school">THE FUTURE SCHOOL</a>
+					  <a href="forms#arabic-school">THE FUTURE SCHOOL</a>
 					  </li>
 					</ul>
 					</li>
