Update forms links

--- a/forms/venue-hire.html
+++ b/forms/venue-hire.html
@@ -30,7 +30,7 @@
 				<a href="../about">ABOUT</a>
 				</li>
 				<li>
-				<a href="../">WHAT WE DO</a>
+				<a href="">WHAT WE DO</a>
 				<ul class="nav-dropdown">
 				  <li>
 				  <a href="../what-we-do#community-development">COMMUNITY DEVELOPMENT</a>
@@ -59,10 +59,10 @@
 				<a>BOOK</a>
 				<ul class="nav-dropdown">
 				  <li>
-				  <a href="../">VENUE HIRE</a>
+				  <a href="../forms#venue-hire">VENUE HIRE</a>
 				  </li>
 				  <li>
-				  <a href="../">THE FUTURE SCHOOL</a>
+				  <a href="../forms#arabic-school">THE FUTURE SCHOOL</a>
 				  </li>
 				</ul>
 				</li>
