--- a/forms/registration.html
+++ b/forms/registration.html
@@ -21,7 +21,7 @@
 			  </div>
 		  
 			  <nav>
-			  <div class="nav-mobile"><a id="nav-toggle" href="../"><span></span></a></div>
+			  <div class="nav-mobile"><a id="nav-toggle"><span></span></a></div>
 			  <ul class="nav-list">
 				<li>
 				<a href="/">HOME</a>
