--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									</header>
 									<p> We have an air conditioned open plan space with a capacity for upto 80 people with internet connection, a sound system, a kitchen, disabled access and toilets, front and rear car parking. It is a perfect event space available to hire for clubs, groups, workshops, meetings, parties and other special events.</p>
 									<footer class="align-center">
-										<a href="forms/venue-hire.html" class="button alt">Book</a>
+										<a href="forms/venue-hire" class="button alt">Book</a>
 									</footer>
 								</div>
 							</div>
@@ -145,7 +145,7 @@
 									</header>
 									<p> The Future School offers cultural and supplementary language education classes in Arabic to children aged 5 to 15. It proudly preserves the roots and identity of Yemenis and the wider Arab community. It also provides a platform for the children to celebrate there cultural heritage.</p>
 									<footer class="align-center">
-										<a href="forms/registration.html" class="button alt">Register</a>
+										<a href="forms/registration" class="button alt">Register</a>
 									</footer>
 								</div>
 							</div>
