--- a/what-we-do.html
+++ b/what-we-do.html
@@ -104,7 +104,7 @@
 							<p>The youth club is held every Sunday. Currently, we have 25 attendees between the ages of 11-17.</p>
                             <p>Girls club held every Monday has over 20 attendees. All run by volunteers. It's members fully support the club. However, the club has no funding at this current time. Seeking funds for this project will be one of our main priorities over the coming months.</p>
                             <h3 id="arts">ARTS, CULTURE AND HERITAGE</h3>
-                            <p>The local community requested we set up an Arabic school. It's our second year, and we now have six teachers and 70 students. The school opens Friday evening between 5 PM - 8 PM and Saturday between 11 AM - 2 PM. If you wish your child to attend please click <a>HERE</a></p>
+                            <p>The local community requested we set up an Arabic school. It's our second year, and we now have six teachers and 70 students. The school opens Friday evening between 5 PM - 8 PM and Saturday between 11 AM - 2 PM. If you wish your child to attend please register your interest <a href="forms/registration">HERE</a></p>
                             <h3 id="sports">SPORTS</h3>
                             <p>Swimming every Saturday morning at Hillsborough Leisure Centre. Please contact us for details.</p>
                             <p id="other">Football every Saturday at Goodwin Sports Centre. Please contact us for details.</p>
