--- a/forms/registration.html
+++ b/forms/registration.html
@@ -96,7 +96,17 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd178MeWjMHxzvfQxvj-NdL8-E_ZQHbnK9i8j4zJHB4kkpVjQ/viewform?embedded=true" width="100%" height="1080" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd178MeWjMHxzvfQxvj-NdL8-E_ZQHbnK9i8j4zJHB4kkpVjQ/viewform?embedded=true" width="100%" height="1200" frameborder="0" marginheight="0" marginwidth="0" onload="loaded()">Loading…</iframe>
+							<script type="application/javascript">
+								var loadCounter = 0;
+								var loaded = function() {
+									loadCounter += 1;
+									if (loadCounter === 2) {
+										$("iframe").attr("height", "600px");
+										$(window).scrollTo(380,0)
+									}
+								}
+							</script>
 						</div>
 					</div>
 				</div>
@@ -120,6 +130,7 @@
 		<!-- Scripts -->
 			<script src="../assets/js/jquery.min.js"></script>
 			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/jquery.scrollTo.min.js"></script>
 			<script src="../assets/js/skel.min.js"></script>
 			<script src="../assets/js/util.js"></script>
 			<script src="../assets/js/main.js"></script>
