--- a/forms/venue-hire.html
+++ b/forms/venue-hire.html
@@ -94,7 +94,17 @@
 				<div class="inner">
 					<div class="box">
 						<div class="content">
-							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe7UhKUAjqWMPp4FF4pWYOt4TJpqwbaQE3oFd-8Ar4ohkef2w/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+							<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe7UhKUAjqWMPp4FF4pWYOt4TJpqwbaQE3oFd-8Ar4ohkef2w/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0" onload="loaded()">Loading…</iframe>
+							<script type="application/javascript">
+								var loadCounter = 0;
+								var loaded = function() {
+									loadCounter += 1;
+									if (loadCounter === 2) {
+										$("iframe").attr("height", "500px");
+										$(window).scrollTo(380,0)
+									}
+								}
+							</script>
 						</div>
 					</div>
 				</div>
@@ -118,6 +128,7 @@
 		<!-- Scripts -->
 			<script src="../assets/js/jquery.min.js"></script>
 			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/jquery.scrollTo.min.js"></script>
 			<script src="../assets/js/skel.min.js"></script>
 			<script src="../assets/js/util.js"></script>
 			<script src="../assets/js/main.js"></script>
