Google translate test

--- a/forms.html
+++ b/forms.html
@@ -11,6 +11,8 @@
 	</head>
 	<body class="subpage">
 
+		<div id="google_translate_element"></div>
+
 		<!-- Header	-->
 		<section class="navigation">
 			<div class="nav-container">
@@ -155,6 +157,12 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script type="text/javascript">
+			function googleTranslateElementInit() {
+			  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+			}
+			</script>
+			
+			<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	</body>
 </html>
